syntax = "proto3";

package plants;

option go_package = "github.com/mbcarruthers/gRPCplants";

import "google/protobuf/empty.proto";

message Plant {
  string id = 1;
  string common_name = 2;
  string genus = 3;
  string species = 4;
}

// message for when only the plants id is needed
message PlantId {
  string id = 1;
}

service PlantService {
  rpc CreatePlant(Plant) returns (PlantId); // Create a single plant
  rpc ReadPlant(PlantId) returns (Plant); // read a single plant found by it's id
  rpc UpdatePlant(Plant) returns (google.protobuf.Empty); // update a single plants
  rpc DeletePlant(PlantId) returns (google.protobuf.Empty); // delete a single plant by its Id
  rpc ListPlants(google.protobuf.Empty) returns (stream Plant); // List all plants
}